--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,17 @@
     "@mdi/js": "^5.1.45",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "laravel-echo": "^1.8.0",
+    "material-design-icons-iconfont": "^5.0.1",
+    "pusher-js": "^5.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-socket.io": "^3.0.9",
     "vue-upload-image": "^1.1.5",
     "vuelidate": "^0.7.5",
     "vuetify": "^2.2.11",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -32,6 +37,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "html-loader": "^1.1.0",
     "node-sass": "^4.14.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
