--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
+    "/js/app.bundle.js": "/js/app.bundle.js",
     "/css/app.css": "/css/app.css",
-    "/js/bootstrap.js": "/js/bootstrap.js"
+    "/js/bootstrap.bundle.js": "/js/bootstrap.bundle.js"
 }
