add build chunk files to /public/js folder

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.bundle.js": "/js/app.bundle.js",
-    "/css/app.css": "/css/app.css",
-    "/js/bootstrap.bundle.js": "/js/bootstrap.bundle.js"
+    "/js/app.js": "/js/app.js?id=46afa7d688a6094ab18b",
+    "/css/app.css": "/css/app.css?id=03808cc3aebcaea247b6",
+    "/js/bootstrap.js": "/js/bootstrap.js?id=7c3827a0b0d2647744bd"
 }
